fix(ui): Fixed overflow-x for long transaction names

--- a/interface/src/styles/index.scss
+++ b/interface/src/styles/index.scss
@@ -16,6 +16,7 @@ body {
     position: relative;
     flex: 1;
     max-width: 100vw;
+    width: 100%;
   }
 
   // When a modal is open, don't let the window scroll. Scroll containers in the
